# prismlib

./: LICENSE  Makefile  README.md  install.sh  uninstall.sh
doc/: index.html
doc/search/: search_index.json
examples/c/: continuous_scan.c  fft_scan.c  finite_scan.c
examples/python/: continuous_scan.py  fft_scan.py  finite_scan.py
include/: prismc.h  prismlib.h
lib/: led.c  led.h  prismc.c  prismlib.c  protocol.c  protocol.h  scan.c  scan.h  transport.c  transport.h
python/: pyproject.toml
python/prism/: __init__.py  constants.py  prism.py  protocol.py  scan_thread.py  transport.py
python/prismlib/: __init__.py  constants.py  prismlib_c.py
test/c/: test_config.c  test_continuous_scan.c  test_device.c  test_finite_scan.c
test/python/: test_config.py  test_continuous_scan.py  test_device.py  test_finite_scan.py
